Im geetting really upset over 4 hours of nothing working what a huge waste of my time

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,6 @@
   opacity: 50%;
 }
 
-.Carousel {
-  max-height: 400px !important;
+.dropdown {
+  position: relative;
 }
-
-
-@media (min-width: 576px) and (max-width: 767.98px) {}
